code/typescript/FactSetFunds/v1/docs/DistCurrent.md
# factsetfunds.DistCurrent

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**fsymId** | **String** | FactSet Security Identifier. Six alpha-numeric characters, excluding vowels, with a -S suffix (XXXXXX-S), resolved from the requestId of the Fund requested. | [optional] 
**date** | **Date** | The date of the distribution in YYYY-MM-DD format. | [optional] 
**currency** | **String** | ISO Currency | [optional] 
**totalDistributions** | **Number** | Total Distributions. | [optional] 
**returnOfCapital** | **Number** | Return on Capital. | [optional] 
**qualifiedDividends** | **Number** | Qualified Dividends. | [optional] 
**nonQualifiedDividends** | **Number** | Non-Qualified Dividends. | [optional] 
**dailyAccruedDividends** | **Number** | Daily Accrued Dividends. | [optional] 
**stCapitalGains** | **Number** | Short-Term Capital Gains. | [optional] 
**ltCapitalGains** | **Number** | Long-Term Capital Gains. | [optional] 
**indicatedAnnualDividend** | **Number** | Indicated annual dividend. | [optional] 
**distFrequency** | **String** | Distribution frequency. | [optional] 
**ltmDistYield** | **Number** | Distribution yield for the last twelve months. | [optional] 
**firstDistDate** | **Date** | The date of the funds first distribution in YYYY-MM-DD format. | [optional] 
**sevenDayNetSecYield** | **Number** | Net SEC yield for the last seven days. | [optional] 
**sevenDayGrossSecYield** | **Number** | Gross SEC yield for the last seven days. | [optional] 
**thirtyDayNetSecYield** | **Number** | Net SEC yield for the thirty thirty days. | [optional] 
**thirtyDayGrossSecYield** | **Number** | Gross SEC yield for the last thirty days. | [optional] 
**requestId** | **String** | The requested Id sent as input. | [optional] 


