code/typescript/FactSetFunds/v3/docs/DistCurrent.md
# factsetfunds.DistCurrent

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**fsymId** | **String** | FactSet Security Identifier. Six alpha-numeric characters, excluding vowels, with a -S suffix (XXXXXX-S), resolved from the &#x60;requestId&#x60; of the Fund requested. | [optional] 
**requestId** | **String** | The requested Id sent as input. | [optional] 
**error** | [**FundsErrorObject**](FundsErrorObject.md) |  | [optional] 
**date** | **Date** | The date of the distribution in YYYY-MM-DD format. | [optional] 
**distributionType** | [**DistCurrentType**](DistCurrentType.md) |  | 
**distributionFrequency** | **String** | Returns the distribution frequency. | [optional] 
**dividendExDate** | **Date** | Returns the ex-dividend date of the most recently reported dividend. Data is currently only and available only for ETFs. | [optional] 
**currency** | **String** | ISO3 Currency. For a list of currency ISO codes, visit Online Assistant Page [OA1470](https://my.apps.factset.com/oa/pages/1470)&#39; | [optional] 
**totalDistributions** | **Number** | Total Distributions. | [optional] 
**returnOfCapital** | **Number** | Return on Capital. | [optional] 
**qualifiedDividends** | **Number** | Qualified Dividends. | [optional] 
**nonQualifiedDividends** | **Number** | Non-Qualified Dividends. | [optional] 
**dailyAccruedDividends** | **Number** | Daily Accrued Dividends. | [optional] 
**shortTermCapitalGains** | **Number** | Short-Term Capital Gains. | [optional] 
**longTermCapitalGains** | **Number** | Long-Term Capital Gains. | [optional] 
**indicatedAnnualDividend** | **Number** | Indicated annual dividend. | [optional] 
**last12MonthDistributionYield** | **Number** | Distribution yield for the last twelve months. | [optional] 
**firstDistributionDate** | **Date** | The date of the funds first distribution in YYYY-MM-DD format. | [optional] 
**dividendType** | **String** | Returns the dividend treatment for the specified share class (distributes/capitalizes). Data is returned for both Mutual Funds and ETFs. | [optional] 


